made pong game and some bug fixes.

--- a/Multigame.vcxproj
+++ b/Multigame.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="pong.cpp" />
+    <ClCompile Include="pong.h" />
     <ClCompile Include="tictactoe.cpp" />
     <ClCompile Include="Gamemenu.cpp" />
     <ClCompile Include="main.cpp" />
