--- a/Multigame.vcxproj.filters
+++ b/Multigame.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClCompile Include="tictactoe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pong.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pong.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
