Made the code more simple to read, Tic-Tac-Toe now saves score into document

--- a/Multigame.vcxproj
+++ b/Multigame.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="maze.cpp" />
     <ClCompile Include="pong.cpp" />
     <ClCompile Include="pong.h" />
     <ClCompile Include="tictactoe.cpp" />
